---------------------------------------------------------------------------------------------------
Version: 4.1.34
Date: ????
  Bugfixes:
    - Fixed crushed quartz & tin being unobtainable for initial science with bare PyRO
    - Fixed that adding an ore for initial omnitraction that requires a fluid to mine could cause
      a crash if that same ore was already in tier 1
---------------------------------------------------------------------------------------------------
Version: 4.1.33
Date: 2023.03.19
  Changes:
    - Reduced the amount of crushed stone required for omnicium from 4 to 3 with angels refining
---------------------------------------------------------------------------------------------------
Version: 4.1.32
Date: 2022.12.11
  Changes:
    - Reduced the required science packs for omnium processing from 25 to 15
    - Reduced the amount of crushed stone required for omnicium from 4 to 2 without angels refining
  Compatibility:
    - Added intital salt extraction recipes for baketorio
    - Added kerogen extraction with pypetroleumhandling
  Bugfixes:
    - Fixed that the "Sorting gems" recipe was added even though unsorted gems were disabled by bob
---------------------------------------------------------------------------------------------------
Version: 4.1.31
Date: 2022.08.17
  Features:
    - WARNING: THIS WILL BREAK EXISTING SETUPS!
    - Added a new, plate made out of crushed stone and omnite that replaces the old omnicium plate
      targeting a faster early (burner-) game
    - Added Omcrete and Refined omcrete
  Changes:
    - Renamed omnicium to omnium
    - Lock omnium behind T1 technologies
    - Replaced omnium with the new omnicium in all early game recipes
    - Slightly adjusted other ingredients in those recipes if necessary
    - Lowered the omnite brick walking speed modifier from 150% to 140%
  Bugfixes:
    - Fixed that some SD omnite brick tile transitions used vanilla brick pictures