@@ -13,7 +13,7 @@ local function reqpure(tier,level,item)
 end
 
 local function tech_cost(levels,grade,tier)
-    return omni.lib.round(20*math.pow(omni.pure_tech_tier_increase,tier)*omni.matter.get_tier_mult(levels,grade,1))
+    return omni.lib.round(20*math.pow(omni.pure_tech_tier_increase, tier)*omni.matter.get_tier_mult(levels,grade,1))
 end
 
 local function generate_impure_icon(ore_name)
